py_pkg/log/build_2022-04-09_16-43-14/py_pkg/stdout_stderr.log
running egg_info
writing build/py_pkg/py_pkg.egg-info/PKG-INFO
writing dependency_links to build/py_pkg/py_pkg.egg-info/dependency_links.txt
writing entry points to build/py_pkg/py_pkg.egg-info/entry_points.txt
writing requirements to build/py_pkg/py_pkg.egg-info/requires.txt
writing top-level names to build/py_pkg/py_pkg.egg-info/top_level.txt
reading manifest file 'build/py_pkg/py_pkg.egg-info/SOURCES.txt'
writing manifest file 'build/py_pkg/py_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying py_pkg/py_node.py -> /home/eyal/AutowareAuto/my_packages/py_pkg/build/py_pkg/build/lib/py_pkg
running install
running install_lib
copying /home/eyal/AutowareAuto/my_packages/py_pkg/build/py_pkg/build/lib/py_pkg/py_node.py -> /home/eyal/AutowareAuto/my_packages/py_pkg/install/py_pkg/lib/python3.8/site-packages/py_pkg
byte-compiling /home/eyal/AutowareAuto/my_packages/py_pkg/install/py_pkg/lib/python3.8/site-packages/py_pkg/py_node.py to py_node.cpython-38.pyc
running install_data
  File "/home/eyal/AutowareAuto/my_packages/py_pkg/install/py_pkg/lib/python3.8/site-packages/py_pkg/py_node.py", line 24
    grid = np.reshape(grid, (1500 500))
                                  ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/eyal/AutowareAuto/my_packages/py_pkg/install/py_pkg/lib/python3.8/site-packages/py_pkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying build/py_pkg/py_pkg.egg-info to /home/eyal/AutowareAuto/my_packages/py_pkg/install/py_pkg/lib/python3.8/site-packages/py_pkg-0.0.0-py3.8.egg-info
running install_scripts
Installing listener script to /home/eyal/AutowareAuto/my_packages/py_pkg/install/py_pkg/lib/py_pkg
writing list of installed files to '/home/eyal/AutowareAuto/my_packages/py_pkg/build/py_pkg/install.log'
